Re styled most elements to fit page better and for easier viewing

--- a/index.html
+++ b/index.html
@@ -117,9 +117,14 @@ window.onload=function(){
 </div>
 
 <div class="main">
-  <a href="https://www.facebook.com/DownloadFestivalFR"><img src="img/facebook.png" alt="Facebook Logo"></a>
-  <a href="https://www.instagram.com/downloadfestfr/"><img src="img/instagram.png" alt="Instagram Logo"></a>
-  <a href="https://twitter.com/downloadfestfr"><img src="img/twitter.png" alt="Twitter Logo"></a>
+  <div class="links">
+    <a href="https://www.facebook.com/DownloadFestivalFR"><img src="img/facebook.png" alt="Facebook Logo"></a>
+    <a href="https://www.instagram.com/downloadfestfr/"><img src="img/instagram.png" alt="Instagram Logo"></a>
+    <a href="https://twitter.com/downloadfestfr"><img src="img/twitter.png" alt="Twitter Logo"></a>
+  </div>
+  <div class="background">
+    <img src="img/dlfrance2017-logo.png" alt="Download Paris Logo">
+  </div>
 </div>
 </div>
 </body>
