--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ window.onload=function(){
     <a href="https://twitter.com/downloadfestfr"><img src="img/twitter.png" alt="Twitter Logo"></a>
   </div>
   <div class="background">
-    <img src="img/dlfrance2017-logo.png" alt="Download Paris Logo">
+    <a href="https://www.festicket.com/packages/download-festival-paris-2017/3-days-pass/"><img src="img/dlfrance2017-logo.png" alt="Download Paris Logo"></a>
   </div>
 </div>
 </div>
