Changed booking link to download website link, added event dates

--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@ window.onload=function(){
     <a href="https://twitter.com/downloadfestfr"><img src="img/twitter.png" alt="Twitter Logo"></a>
   </div>
   <div class="background">
-    <a href="https://www.festicket.com/packages/download-festival-paris-2017/3-days-pass/"><img src="img/dlfrance2017-logo.png" alt="Download Paris Logo"></a>
+    <a href="http://www.downloadfestival.fr/fr"><img src="img/dlfrance2017-logo.png" alt="Download Paris Logo"></a>
   </div>
+  <h2>June 9th - June 11th 2017</h2>
 <!--
   <div class="scroller">
     <a href="#lineup"><img src="img/arrowdown.png"></a>
